assets/styles/main.css
:root {
  --sticky-hide: 7vh;
}
* {
  box-sizing: border-box;
  margin: 0;
}
body{
  font-family: 'Arimo', sans-serif;
}
nav {
  background-color: #000;
  border-bottom: 1px solid white;
}
.topNav {
  background-color: black;
  height: 3vh;
  list-style: none;
  overflow: hidden;
}
.topNav li {
  display: inline-block;
}
.topNav li a{
  display: inline-block;
  color: #b8b5b5;
  text-decoration: none;
  line-height: 1.2vh;
  font-size: 13px;
  padding: 7px 6px;
}
.topNav li a:hover{
  color: #fff;
}
.topNav li a:active{
  color: #fff;
}

.mainNav {
  position: sticky;
  top: 0;
}

.headHero {
  background-color: blue;
  height: 50vh;
  display: grid;
}
.headHero div {
  border: 1px solid dimgray;
  height: 100%;
}
.navLinks {
  height: var(--sticky-hide);
  background-color: #fffdfd;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.mainNavLinks{
  list-style: none;
  overflow: hidden;
  height: 100%;
  width: 65%;
  border-right: solid 1px #c7c4c4;
}
.mainNavLinks li {
  display: inline-block;
  padding-top: 9px;
}
.mainNavLinks li a{
  display: inline-block;
  color: #b8b5b5;
  text-decoration: none;
  text-transform: uppercase;
  line-height: 1.2vh;
  font-size: 16px;
  padding: 7px 6px;
}
.mainNavLinks li a:hover{
  color: #3b3a3a;
  background-color: #fffdfd;
}
.mainNavRight{
 display: flex;
  align-items: center;
  justify-content: space-around; 
  width: 30%;
}
.navRightImg{
  display:none;
}
.fa-bars{
  color:#ec4545;
  font-size: 22px;
}
.timer{
  color:#ec4545;
  font-size: 22px;
}
.countdown-text{
  display: none;
  font-size: 12px;
}
.btn-tickets{
  display: none;
  background-color:  #0cc;;
  border-style: none;
  border-radius: 5px;
  color: #ffffff;
  padding: 8px;
}
.yellow {
  background-color: yellow;
  height: 3vh;
  position: sticky;
  top: var(--sticky-hide);
  padding-top: 3px;
}
.yellow a{
  text-decoration: none;
  font-size: 12px;
  padding-left: 12px;
  color: #000000;
}

.grid-container{
  display: grid;
}
.four-columns{
  grid-template-columns: repeat(4, 24%);
  grid-auto-rows: minmax(100px, 1fr);
  gap: 1%;
}
.flex-columns{
  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
  grid-auto-rows: minmax(100px, 1fr);
}
.x1024{
  max-width: 1024px;
  margin: 0 auto;
}

.news-section {
  background-color: green;
  justify-content: center;
  gap: 10px;
}

.news-section * {
  border: 1px solid dimgray;
}
.deals{
  margin: 0 auto;
  background-color: rebeccapurple;
}
.services{
  margin: 0 auto;
  gap: 10px;
}
.service-item{
  background-color: orangered;
  margin: 1px;
}
footer{
  height: 25vh;
  background-color: darkgray;
}
@media screen and (max-width: 768px) {
  .deals,
  .news-section,
  .headHero,
  .services{
    display: grid;
    grid-template-columns: 100%;
  }
}
@media screen and (min-width: 1024px){
  .navRightImg,
  .countdown-text,
  .btn-tickets{
    display: block;
  }
}

